--- a/ParayoServer/build.gradle
+++ b/ParayoServer/build.gradle
@@ -1,6 +1,16 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+
+    //For Spring Boot
+    id 'org.springframework.boot' version '2.1.5.RELEASE'
+    id "org.jetbrains.kotlin.plugin.spring" version "1.3.30"
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.30'
+}
+apply plugin: 'io.spring.dependency-management'
+
+allOpen {
+    annotation("javax.persistence.Entity")
 }
 
 group 'com.example'
@@ -15,6 +25,9 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation "org.springframework.boot:spring-boot-starter-web"
 }
 
 compileKotlin {
