--- a/ParayoServer/build.gradle
+++ b/ParayoServer/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-jdbc"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    runtimeOnly 'mysql:mysql-connector-java'
 }
 
 compileKotlin {
