--- a/Parayo/app/build.gradle
+++ b/Parayo/app/build.gradle
@@ -27,6 +27,8 @@ android {
 
 ext {
     anko_version = '0.10.8'
+    retrofit_version = '2.6.0'
+    okhttp_version = '3.8.0'
 }
 
 dependencies {
@@ -42,4 +44,9 @@ dependencies {
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     implementation "org.jetbrains.anko:anko-design-coroutines:$anko_version"
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 }
