--- a/ParayoServer/build.gradle
+++ b/ParayoServer/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-jdbc"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     runtimeOnly 'mysql:mysql-connector-java'
+
+    implementation 'org.mindrot:jbcrypt:0.4'
 }
 
 compileKotlin {
