--- a/Parayo/app/build.gradle
+++ b/Parayo/app/build.gradle
@@ -26,6 +26,7 @@ android {
 }
 
 ext {
+    arch_version = '2.2.0-alpha01'
     anko_version = '0.10.8'
     retrofit_version = '2.6.0'
     okhttp_version = '3.8.0'
@@ -49,4 +50,10 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+    implementation 'com.github.benimario:ankomvvm:0.1.0'
+
+    implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$arch_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$arch_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$arch_version"
 }
