--- a/ParayoServer/build.gradle
+++ b/ParayoServer/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
 
     implementation 'org.mindrot:jbcrypt:0.4'
+
+    implementation 'com.auth0:java-jwt:3.8.1'
 }
 
 compileKotlin {
