--- a/Parayo/app/src/main/AndroidManifest.xml
+++ b/Parayo/app/src/main/AndroidManifest.xml
@@ -20,5 +20,6 @@
         </activity>
         <activity android:name=".signup.SignUpActivity" />
         <activity android:name=".signin.SignInActivity" />
+        <activity android:name=".product.ProductMainActivity" />
     </application>
 </manifest>
