썸네일 라이브러리 추가

--- a/ParayoServer/build.gradle
+++ b/ParayoServer/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'org.mindrot:jbcrypt:0.4'
 
     implementation 'com.auth0:java-jwt:3.8.1'
+
+    implementation 'net.coobird:thumbnailator:0.4.8'
 }
 
 compileKotlin {
