--- a/Parayo/app/src/main/AndroidManifest.xml
+++ b/Parayo/app/src/main/AndroidManifest.xml
@@ -21,5 +21,8 @@
         <activity android:name=".signup.SignUpActivity" />
         <activity android:name=".signin.SignInActivity" />
         <activity android:name=".product.ProductMainActivity" />
+        <activity
+            android:name=".product.registration.ProductRegistrationActivity"
+            android:theme="@style/Theme.AppCompat.Light" />
     </application>
 </manifest>
