--- a/Parayo/app/build.gradle
+++ b/Parayo/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$arch_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$arch_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$arch_version"
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
