상세화면 Activity 등록

--- a/Parayo/app/src/main/AndroidManifest.xml
+++ b/Parayo/app/src/main/AndroidManifest.xml
@@ -24,5 +24,6 @@
         <activity
             android:name=".product.registration.ProductRegistrationActivity"
             android:theme="@style/Theme.AppCompat.Light" />
+        <activity android:name=".product.detail.ProductDetailActivity" />
     </application>
 </manifest>
