상세화면 Activity 앱바 사용 - 앱테마 설정-> 기본 앱바 사용

--- a/Parayo/app/src/main/AndroidManifest.xml
+++ b/Parayo/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         <activity
             android:name=".product.registration.ProductRegistrationActivity"
             android:theme="@style/Theme.AppCompat.Light" />
-        <activity android:name=".product.detail.ProductDetailActivity" />
+        <activity
+            android:name=".product.detail.ProductDetailActivity"
+            android:theme="@style/Theme.AppCompat.Light" />
     </application>
 </manifest>
