--- a/Parayo/app/src/main/AndroidManifest.xml
+++ b/Parayo/app/src/main/AndroidManifest.xml
@@ -27,5 +27,6 @@
         <activity
             android:name=".product.detail.ProductDetailActivity"
             android:theme="@style/Theme.AppCompat.Light" />
+        <activity android:name=".product.search.ProductSearchActivity" />
     </application>
 </manifest>
