--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.gitignore.io/api/macos,android,intellij,androidstudio
 # Edit at https://www.gitignore.io/?templates=macos,android,intellij,androidstudio
 
+google-services.json
 .idea/
 gradlew.*
 application.yml
