--- a/ParayoServer/build.gradle
+++ b/ParayoServer/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.auth0:java-jwt:3.8.1'
 
     implementation 'net.coobird:thumbnailator:0.4.8'
+
+    implementation 'com.google.firebase:firebase-admin:6.8.1'
 }
 
 compileKotlin {
