MVVM 템플릿에 맞춰 Activity, UI 클래스 작성

--- a/Parayo/app/src/main/AndroidManifest.xml
+++ b/Parayo/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:name=".product.detail.ProductDetailActivity"
             android:theme="@style/Theme.AppCompat.Light" />
         <activity android:name=".product.search.ProductSearchActivity" />
+        <activity android:name=".inquiry.ProductInquiryActivity" />
 
         <service android:name=".fcm.ParayoMessagingService">
             <intent-filter>
