상품 문의 UI, Activity 작성

--- a/Parayo/app/src/main/AndroidManifest.xml
+++ b/Parayo/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:theme="@style/Theme.AppCompat.Light" />
         <activity android:name=".product.search.ProductSearchActivity" />
         <activity android:name=".inquiry.ProductInquiryActivity" />
+        <activity android:name=".inquiry.registration.InquiryRegistrationActivity" />
 
         <service android:name=".fcm.ParayoMessagingService">
             <intent-filter>
